finished analysis notebook

--- a/performance_analysis.ipynb
+++ b/performance_analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2836b01f",
    "metadata": {
     "code_folding": []
@@ -79,8 +79,7 @@
       " 33  G2           395 non-null    int64  \n",
       " 34  G3           395 non-null    int64  \n",
       "dtypes: float64(4), int64(14), object(17)\n",
-      "memory usage: 108.1+ KB\n",
-      "X_train: {X_train[:10]}\n"
+      "memory usage: 108.1+ KB\n"
      ]
     }
    ],
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "80e96718",
    "metadata": {},
    "outputs": [
@@ -298,7 +297,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "69cba446",
    "metadata": {},
    "outputs": [
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "3e604a0c",
    "metadata": {},
    "outputs": [
@@ -780,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "e70809f6",
    "metadata": {},
    "outputs": [],
@@ -803,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "92fdd2cc",
    "metadata": {},
    "outputs": [],
@@ -840,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "id": "9d33fc45",
    "metadata": {},
    "outputs": [],
@@ -889,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "id": "79af6f03",
    "metadata": {},
    "outputs": [],
@@ -921,46 +920,13 @@
    "id": "51bacc10",
    "metadata": {},
    "source": [
-    "## Shortlist Promising Models\n",
-    "In this section, you will fit and compare three regression models to your transformed data, both with and without the G1/G2 columns, using cross-validation. Follow the steps below, using the specified variable names.\n",
-    "\n",
-    "1) **Initialize Three Regression Models**\n",
-    "- Linear Regression\n",
-    "- Support Vector Machine (SVM) Regression\n",
-    "- Lasso Regression\n",
-    "\n",
-    "2) **Compare Models with Cross-Validation**\n",
-    "- Using the above models, perform cross-validation on each model using both sets of transformed data (with and without G1/G2 columns).\n",
-    "\n",
-    "### Instructions for Submission\n",
-    "1) **Initialize the Models**: Instantiate a Linear Regression, SVM Regression, and Lasso Regression model.\n",
-    "  - Use the specified variable names for the respective models:\n",
-    "    - `lin_reg`\n",
-    "    - `svm_reg`\n",
-    "    - `lasso_reg`\n",
-    "2) **Cross-Validation**: Using both sets of transformed data (with and without G1/G2 columns), perform 3-fold cross-validation for each model using RMSE as the metric.\n",
-    "  - You will run cross-validation six times (e.g., cross-validation of the linear regression model with the G1/G2 data, cross-validation of the linear regression model without the G1/G2 data, etc.)\n",
-    "  - Use the specified variable names to save each respective array of scores:\n",
-    "    - `cv_scores_lin_reg_with_grades`\n",
-    "    - `cv_scores_lin_reg_without_grades`\n",
-    "    - `cv_scores_svm_with_grades`\n",
-    "    - `cv_scores_svm_without_grades`\n",
-    "    - `cv_scores_lasso_with_grades`\n",
-    "    - `cv_scores_lasso_without_grades`\n",
-    "  - Use the specified variable names to save the mean of each cross-validation array and print it to view your mean scores:\n",
-    "    - `rmse_lin_reg_with_grades`\n",
-    "    - `rmse_lin_reg_without_grades`\n",
-    "    - `rmse_svm_with_grades`\n",
-    "    - `rmse_svm_without_grades`\n",
-    "    - `rmse_lasso_with_grades`\n",
-    "    - `rmse_lasso_without_grades`\n",
-    "\n",
-    "*You are welcome to test and fit more regression models as long as the above three are included and named appropriately*"
+    "## Regression Models\n",
+    "This section fits and compares three regression models to the transformed data, both with and without the G1/G2 columns, using cross-validation and then compares RMSE scores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 43,
    "id": "669b6248",
    "metadata": {},
    "outputs": [
@@ -968,6 +934,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RMSE Scores:\n",
+      "------------\n",
       "rmse_lin_reg_with_grades: 1.8748791728883922\n",
       "rmse_lin_reg_without_grades: 4.497065931519388\n",
       "rmse_svm_with_grades: 2.23991975887249\n",
@@ -993,23 +961,19 @@
     "### cross validation scores\n",
     "# lin_reg\n",
     "cv_scores_lin_reg_with_grades = -cross_val_score(lin_reg, X_train_transformed_with_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "# cv_scores_lin_reg_with_grades\n",
     "cv_scores_lin_reg_without_grades = -cross_val_score(lin_reg, X_train_transformed_without_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "# cv_scores_lin_reg_without_grades\n",
     "\n",
     "# svm\n",
     "cv_scores_svm_with_grades = -cross_val_score(svm_reg, X_train_transformed_with_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "# cv_scores_svm_with_grades\n",
     "cv_scores_svm_without_grades = -cross_val_score(svm_reg, X_train_transformed_without_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "# cv_scores_svm_without_grades\n",
     "\n",
     "# lasso\n",
     "cv_scores_lasso_with_grades = -cross_val_score(lasso_reg, X_train_transformed_with_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "# cv_scores_svm_with_grades\n",
     "cv_scores_lasso_without_grades = -cross_val_score(lasso_reg, X_train_transformed_without_grades, y_train, cv=3, scoring=\"neg_root_mean_squared_error\")\n",
-    "cv_scores_svm_without_grades\n",
     "\n",
     "### mean rmse scores\n",
+    "print(f\"RMSE Scores:\")\n",
+    "print(f\"------------\")\n",
     "# lin_reg\n",
     "rmse_lin_reg_with_grades = np.mean(cv_scores_lin_reg_with_grades)\n",
     "print(f\"rmse_lin_reg_with_grades: {rmse_lin_reg_with_grades}\")\n",
@@ -1038,27 +1002,12 @@
    "metadata": {},
    "source": [
     "## Fine-Tune the System\n",
-    "In this section, you will use the Support Vector Machine (SVM) regression model and perform grid search to fine-tune its hyperparameters. Follow the steps below to set up the grid search, ensuring you use the specified variable names for automatic grading through CodeGrade.\n",
-    "\n",
-    "1) Set Up Grid Search for SVM Regression\n",
-    "  - Define a parameter grid to search over. Review Scikit-learn's documentation for the available hyperparameters for this algorithm.\n",
-    "  - Use GridSearchCV to find the best hyperparameters.\n",
-    "  - Fit the grid search to both sets (with and without the G1/G2 columns) of the transformed training data.\n",
-    "\n",
-    "### Instructions for Submission\n",
-    "\n",
-    "1) **Define Parameter Grid**: Set up a parameter grid for the SVM regression model name `param_grid`.\n",
-    "2) **Initialize Grid Search**: Initialize the `GridSearchCV` and call this `grid_search`.\n",
-    "3) **Fit the Grid Search**: Fit the grid search to both sets (with and without the G1/G2 columns) of the transformed training data.\n",
-    "4) **Save & Print Best Parameters**: Save the best parameters for each respective fit to `best_params_with_grades` and `best_params_without_grades`, and print them.\n",
-    "5) **Print Best Score**: Use the `best_score_` attribute to view the mean cross-validated score for each respective best_estimator\n",
-    "  \n",
-    "<span style=\"color:red\">Codegrade has a runtime limit of 5 minutes. If your code takes longer than 5 minutes to run, the automatic grading will stop and mark the submission as having an error. Limiting the number of hyperparameters checked during your grid search may greatly reduce your code’s running time.</span>"
+    "This section explores using the Support Vector Machine (SVM) regression model and performing grid search to fine-tune its hyperparameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 44,
    "id": "c71a4dfc",
    "metadata": {},
    "outputs": [
@@ -1068,8 +1017,13 @@
      "text": [
       "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
       "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
+      "Best Parameters: \n",
+      "----------------\n",
       "best_params_with_grades: {'C': 10, 'epsilon': 0.1}\n",
       "best_params_without_grades: {'C': 10, 'epsilon': 0.1}\n",
+      "\n",
+      "Best Scores: \n",
+      "------------\n",
       "svm_model_with_grades best_score: 0.018228194253428514\n",
       "svm_model_without_grades best_score: 0.018228194253428514\n"
      ]
@@ -1093,12 +1047,17 @@
     "svm_model_without_grades = grid_search.fit(X_train_transformed_without_grades, y_train)\n",
     "\n",
     "# best params\n",
+    "print(\"Best Parameters: \")\n",
+    "print(f\"----------------\")\n",
     "best_params_with_grades = svm_model_with_grades.best_params_\n",
     "best_params_without_grades = svm_model_without_grades.best_params_ \n",
     "print(f\"best_params_with_grades: {best_params_with_grades}\")\n",
     "print(f\"best_params_without_grades: {best_params_without_grades}\")\n",
     "\n",
     "# best scores\n",
+    "print(\"\")\n",
+    "print(\"Best Scores: \")\n",
+    "print(f\"------------\")\n",
     "print(f\"svm_model_with_grades best_score: {svm_model_with_grades.best_score_}\")\n",
     "print(f\"svm_model_without_grades best_score: {svm_model_without_grades.best_score_}\")"
    ]
@@ -1108,26 +1067,13 @@
    "id": "07083c80",
    "metadata": {},
    "source": [
-    "## Measure Performance on Test Set\n",
-    "In this section, you will transform the test set using your full pipeline and measure the performance of your best model on the test set. Follow the steps below, using the specified variable names for automatic grading through CodeGrade.\n",
-    "\n",
-    "1) Based on all previous cross-validation results, pick your best model.\n",
-    "2) Use the previously created column transformers to transform the test set, both with and without the G1/G2 columns.\n",
-    "3) Using your best model, measure its performance on the test set to estimate the generalization error.\n",
-    "  \n",
-    "### Instructions for Submission\n",
-    "1) **Fit Best Model**: If you haven't already, fit your best model to both sets of your transformed training data. \n",
-    "2) **Transform the Test Set**: Use your column transformers to transform the test set (`X_test`), both with and without the G1/G2 columns. Name these transformed datasets `X_test_transformed_with_grades` and `X_test_transformed_without_grades`.\n",
-    "3) **Evaluate Performance**: Measure the performance of your best-fitted models on the transformed test sets using Root Mean Squared Error (RMSE) and R-squared (R²) metrics. Save these variables as:\n",
-    "  - `rmse_with_grades`\n",
-    "  - `r2_with_grades`\n",
-    "  - `rmse_without_grades`\n",
-    "  - `r2_without_grades`"
+    "## Measuring Performance on the Test Set\n",
+    "This section transforms the test set using the full pipeline and measures the performance of the best model on the test set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 45,
    "id": "f5c8aef9",
    "metadata": {},
    "outputs": [
@@ -1135,10 +1081,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rmse with grades: 2.1032671534929173\n",
-      "r2 with grades: 0.7842612766930026\n",
-      "rmse without grades: 4.6726385873086045\n",
-      "r2 without grades: -0.0647891264122229\n"
+      "Results for Linear Regression with grades: \n",
+      "------------------------------------------\n",
+      "rmse with grades: 2.0631589874478093\n",
+      "r2 with grades: 0.792410865879065\n",
+      "\n",
+      "Results for Linear Regression without grades: \n",
+      "---------------------------------------------\n",
+      "rmse without grades: 4.663400141615016\n",
+      "r2 without grades: -0.06058282122000214\n"
      ]
     }
    ],
@@ -1157,33 +1108,25 @@
     "X_test_transformed_without_grades = column_transformer_without_grades.transform(X_test)\n",
     "\n",
     "### evaluate performance\n",
+    "print(\"Results for Linear Regression with grades: \")\n",
+    "print(f\"------------------------------------------\")\n",
     "final_with_predictions = model_with_grades.predict(X_test_transformed_with_grades)\n",
     "rmse_with_grades = root_mean_squared_error(y_test, final_with_predictions)\n",
     "print(f\"rmse with grades: {rmse_with_grades}\")\n",
-    "# rmse_with_grades\n",
     "\n",
     "r2_with_grades = r2_score(y_test, final_with_predictions)\n",
     "print(f\"r2 with grades: {r2_with_grades}\")\n",
-    "# r2_with_grades\n",
     "\n",
+    "print(\"\")\n",
+    "print(\"Results for Linear Regression without grades: \")\n",
+    "print(f\"---------------------------------------------\")\n",
     "final_without_predictions = model_without_grades.predict(X_test_transformed_without_grades)\n",
     "rmse_without_grades = root_mean_squared_error(y_test, final_without_predictions)\n",
     "print(f\"rmse without grades: {rmse_without_grades}\")\n",
-    "# rmse_without_grades\n",
     "\n",
     "r2_without_grades = r2_score(y_test, final_without_predictions)\n",
     "print(f\"r2 without grades: {r2_without_grades}\")\n",
-    "# r2_without_grades\n",
-    "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6e9a2ed",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">Codegrade has a runtime limit of 5 minutes.  If your code takes longer than 5 minutes to run, the automatic grading will stop and mark the submission as having an error.  Limiting the amount of hyperparameters checked during your grid search may greatly reduce your code’s running time.</span>"
    ]
   },
   {
@@ -1191,17 +1134,8 @@
    "id": "26bdc5a0",
    "metadata": {},
    "source": [
-    "## Next Steps\n",
-    "Once you complete all the steps above, you will:\n",
-    "\n",
-    "1) Upload your `final_project.ipynb` to the **Final Project Notebook Submission** link in Brightspace to check your work.\n",
-    "2) After passing all unit tests in the automatic grading, finalize your **Executive Summary** document using the student instructions.\n",
-    "3) Submit the **DTSC670_ExecutiveSummary_YourName** document through the **Final Project Executive Summary** submission link.\n",
-    "\n",
-    "<span style='color:red'>**BOTH** parts of this project must be completed and submitted to earn a grade.</span>\n",
-    "\n",
-    "<span style='color:red'>Submit your Executive Summary only **AFTER** submitting your final autograded notebook to CodeGrade and are satisfied with your score. Your CodeGrade submission score will be used to evaluate your overall project. Note that any CodeGrade submissions made after the Executive Summary has been submitted will not be considered.\n",
-    "</span>"
+    "## Conclusion & Next Steps\n",
+    "The Linear Regression model with grades is the best predictor of the student's performance based on the set of regression models tested. The next steps based on the analysis would be to continue finetuning the regressions, and implement a DecisionTree model if the regressions do not show improvements in RMSE and R^2 scores.\n"
    ]
   }
  ],
